--- a/index.html
+++ b/index.html
@@ -164,38 +164,82 @@
               <p>Fernando</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user2.png" alt="">
+              <p>Ana</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user3.png" alt="">
+              <p>Carlos</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user4.png" alt="">
+              <p>Vitor</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user5.png" alt="">
+              <p>Mateus</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user6.png" alt="">
+              <p>Ramos</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user7.png" alt="">
+              <p>Eiji</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user8.png" alt="">
+              <p>Julia</p>
             </div>
             <div class="user">
-              <img src="img/users/user1.png" alt="">
-              <p>Fernando</p>
+              <img src="img/users/user9.png" alt="">
+              <p>Carol</p>
             </div>
+          </div>
+        </Aside>
 
+        <Aside>
+          <div>
+            <h3>Comunidades(42)</h3>
+            <p class="pink">Ver todos</p>
+          </div>
+          <div class="users">
+            <div class="user">
+              <img src="img/comunidades/comunidade1.png" alt="">
+              <p>Carros</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade2.png" alt="">
+              <p>Desenhos</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade3.png" alt="">
+              <p>Crazy</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade4.png" alt="">
+              <p>Fofos</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade5.png" alt="">
+              <p>Animes</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade6.png" alt="">
+              <p>Leitura</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade7.png" alt="">
+              <p>Meu ovo</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade8.png" alt="">
+              <p>My books</p>
+            </div>
+            <div class="user">
+              <img src="img/comunidades/comunidade9.png" alt="">
+              <p>café</p>
+            </div>
           </div>
         </Aside>
       </section>
