--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Orkut</title>
 </head>
 
@@ -23,13 +24,13 @@
           </ul>
         </nav>
       </div>
-      <div>
+      <div class="menu-input">
         <div class="input">
-          <span class="lupa"></span>
+          <img src="img/lupa.svg" alt="">
           <input type="text" placeholder="Pesquisar no Orkut">
         </div>
-        <div class="Perfil">
-          <img src="" alt="">
+        <div class="perfil">
+          <img src="img/FotoPerfil.svg" alt="">
           <p>Igor Daniel</p>
           <img src="img/CaretDown.svg" alt="">
         </div>
@@ -38,8 +39,8 @@
   </header>
 
   <main>
-    <section class="container">
-      <section>
+    <section class="container limite">
+      <section class="perfil-desc">
         <div>
           <img src="img/FotoPerfil.svg" alt="">
           <h2>Igor Daniel</h2>
@@ -49,7 +50,7 @@
           <p>Editar meu perfil</p>
         </div>
       </section>
-      <section>
+      <section class="listas">
         <h1>Boa tarde, Igor Daniel</h1>
         <div>
           <p>Programar sem café é igual poeta sem poesia.</p>
@@ -152,7 +153,7 @@
           <p class="pink">Ver todos</p>
         </ul>
       </section>
-      <section>
+      <section class="asides">
         <Aside>
           <div>
             <h3>Amigo(248)</h3>
