--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       </section>
       <section class="listas">
         <h1>Boa tarde, Igor Daniel</h1>
-        <div>
+        <div class="bloco-verde">
           <p>Programar sem café é igual poeta sem poesia.</p>
         </div>
-        <ul>
+        <ul class="likes">
           <li>
             <span>Fãns</span>
             <div class="icons">
@@ -88,7 +88,7 @@
           </li>
         </ul>
 
-        <ul>
+        <ul class="atributos">
           <li>
             <p>Relacionamento:</p>
             <strong>Solteiro</strong>
@@ -155,7 +155,7 @@
       </section>
       <section class="asides">
         <Aside>
-          <div>
+          <div class="aside-title">
             <h3>Amigo(248)</h3>
             <p class="pink">Ver todos</p>
           </div>
@@ -200,7 +200,7 @@
         </Aside>
 
         <Aside>
-          <div>
+          <div class="aside-title">
             <h3>Comunidades(42)</h3>
             <p class="pink">Ver todos</p>
           </div>
